# DayTour

./: .gitignore  CLAUDE.md  MIGRATION.md  Picnic  README.md  TODO  db.sqlite3  manage.py  procfile  requirements.txt
DayTour/: asgi.py  settings.py  urls.py  wsgi.py
Plan/: admin.py  forms.py  models.py  urls.py  views.py
authuser/: admin.py  forms.py  models.py  urls.py  views.py
backend/: .env.example  2-opt.py  distance_matrix.py  googleplaces.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_guest_itineraries.py  0003_itinerary_summary.py  0004_place_description.py  0005_share_token_widen.py  0006_itinerary_end_loc.py  0007_place_opening_hours.py  0008_place_photos_review.py
backend/app/: main.py
backend/app/api/: auth.py  events.py  itineraries.py  places.py  weather.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  itinerary.py  place.py  review.py  user.py
backend/app/schemas/: auth.py  itinerary.py
backend/app/services/: events.py  google_routes.py  llm.py  osrm.py  places.py  routing.py  weather.py
backend/tests/: test_routing.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
deploy/: Caddyfile.snippet  daytour-backend.service  daytour-frontend.service
frontend/: .env.example  next.config.mjs  package.json  tailwind.config.ts
home/: views.py
scripts/: preview.py  preview_autocomplete.py  preview_curation.py  preview_itinerary_flow.py  preview_restaurants.py  preview_scroll.py  preview_share_menu.py  preview_summarize.py  (+1 more)
(+97 files in other folders)
